--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@mdi/js": "^5.9.55",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.7.0"
   }
 }
