--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "chroma-js": "2.1.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
@@ -24,6 +25,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/chroma-js": "^2.1.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
