--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "REIMS2",
+  "name": "reims2-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.1.0",
+    "@nuxtjs/auth-next": "5.0.0-1620155494.96c1b50",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "chroma-js": "2.1.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "vue-shortkey": "^3.1.7"
+    "vue-shortkey": "^3.1.7",
+    "vuex-persistedstate": "^3.2.0"
   },
   "devDependencies": {
     "@mdi/js": "^5.9.55",
