--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "types": [
       "@nuxt/types",
       "@nuxtjs/axios",
-      "@types/node"
+      "@types/node",
+      "@nuxtjs/auth-next"
     ]
   },
   "exclude": [
