--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
                 "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
             },
             "env": {
-                "API_URL": "http://127.0.0.1:3001" // for AXIOS, change me
+                "API_URL": "https://api.reims2.duckdns.org/friendofasaprosa/api" // for AXIOS, change me
             }
         }
     ],
