--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@types/node",
-      "@nuxtjs/auth-next"
+      "@nuxtjs/auth-next",
+      "@nuxtjs/vuetify"
     ]
   },
   "exclude": [
