--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore ."
+    "lint": "eslint --ext \".ts,.js,.vue\" --ignore-path .gitignore .",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.1.0",
@@ -31,6 +32,7 @@
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/chroma-js": "^2.1.3",
+    "@types/jest": "^27.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -38,6 +40,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "jest-extended": "^1.2.0",
+    "ts-jest": "^27.1.2"
   }
 }
