--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/chroma-js": "^2.1.3",
     "@types/jest": "^28.1.6",
+    "@vue/runtime-dom": "^3.2.37",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.21.0",
     "eslint-config-standard": "^17.0.0",
