--- a/package.json
+++ b/package.json
@@ -17,37 +17,37 @@
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "chroma-js": "2.4.2",
-    "core-js": "^3.25.0",
+    "chroma-js": "^2.4.2",
+    "core-js": "^3.25.1",
     "nuxt": "^2.15.8",
     "nuxt-route-meta": "^2.3.5",
     "vue-shortkey": "^3.1.7",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
     "@mdi/js": "^7.0.96",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/google-fonts": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.12.3",
-    "@types/chroma-js": "^2.1.3",
-    "@types/jest": "^28.1.8",
-    "@vue/runtime-dom": "^3.2.37",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.21.0",
+    "@types/chroma-js": "^2.1.4",
+    "@types/jest": "^29.0.0",
+    "@vue/runtime-dom": "^3.2.39",
+    "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jest": "^28.1.3",
-    "jest-extended": "^3.0.2",
-    "ts-jest": "^28.0.8",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-vue": "^9.4.0",
+    "jest": "^29.0.2",
+    "jest-extended": "^3.1.0",
+    "ts-jest": "^29.0.0",
     "ts-loader": "^8.1.0",
-    "typescript": "4.7.4",
+    "typescript": "^4.8.3",
     "vue-enter-to-tab": "^1.0.2"
   }
 }
