--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,7 @@
         },
         {
             "type": "node",
+            "runtimeVersion": "16.19.0",
             "request": "launch",
             "name": "Nuxt Server",
             "args": [
