--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "chroma-js": "^2.4.2",
-    "core-js": "^3.27.1",
+    "core-js": "^3.27.2",
     "nuxt": "^2.15.8",
     "nuxt-route-meta": "^2.3.5",
     "vue": "^2.7.2",
@@ -37,17 +37,17 @@
     "@nuxtjs/google-fonts": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/chroma-js": "^2.1.4",
-    "@types/jest": "^29.2.5",
-    "eslint": "^8.31.0",
+    "@types/jest": "^29.2.6",
+    "eslint": "^8.32.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-vue": "^9.9.0",
     "jest": "^29.3.1",
-    "jest-extended": "^3.2.1",
-    "ts-jest": "^29.0.3",
+    "jest-extended": "^3.2.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^8.1.0",
     "typescript": "^4.9.4",
     "vue-enter-to-tab": "^1.0.2",
