add build step to CI to catch more errors

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -8,7 +8,7 @@ on:
 env:
   REMOTE_HOST: "ssh://dokku@reims2.app"
 
-concurrency: deploy-frontend
+concurrency: deploy-frontend-dev
 
 jobs:
   deploy-dev-frontend:
