--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "typescript": "^4.9.4",
     "vue-enter-to-tab": "^1.0.2",
     "webpack": "^4.46.0"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
