--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,8 @@
     ":dependencyDashboard",
     ":prHourlyLimitNone",
     ":separateMajorReleases",
-    ""
+    "helpers:disableTypesNodeMajor",
+    "helpers:pinGitHubActionDigests",
+    "schedule:weekends"
   ]
 }
