--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "3.0.1",
@@ -25,6 +25,7 @@
     "nuxt-route-meta": "2.3.6",
     "vue": "2.7.14",
     "vue-shortkey": "3.1.7",
+    "vuex": "3.6.2",
     "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
