--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
   docker:
     # Only start publish after successful build & test on main branch
     needs: ci
-    concurrency: ci-${{ github.ref }}
+    concurrency: docker-${{ github.ref }}
     runs-on: ubuntu-latest
     outputs:
       tags: ${{ steps.meta.outputs.tags }}
@@ -59,7 +59,7 @@ jobs:
       - name: Log into Docker registry
         uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: reims2
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Extract metadata (tags, labels) for Docker
@@ -99,7 +99,7 @@ jobs:
     needs: docker
     runs-on: ubuntu-latest
     # if: github.ref == 'refs/heads/main'
-    concurrency: ci-${{ github.ref }}
+    concurrency: deploy-reims2
     steps:
       - name: executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@v0.1.10
