--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,9 +34,8 @@
                 "program": "${workspaceFolder}/node_modules/nuxt/bin/nuxt.js"
             },
             "env": {
-                //"API_URL": "http://localhost:9966/pvh/api", // local API
-                "API_URL": "https://dev-api.reims2.app/pvh/api", // for AXIOS
-                "DOCS_URL": "http://localhost:8080/",
+                //"API_URL": "http://localhost:9966", // local API
+                "API_URL": "https://dev.reims2.app", // for AXIOS
                 "PVH_DEBUG": "true",
             }
         },
