--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chroma-js": "^2.4.2",
+    "dayjs": "^1.11.9",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
