--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
@@ -39,6 +40,7 @@
     "eslint-plugin-vue": "^9.0.0",
     "jest": "^29.6.1",
     "jest-extended": "^4.0.0",
+    "prettier": "^3.0.0",
     "sass": "^1.63.6",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.0",
