--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: ci
 on:
   push:
     branches:
-      - "**"
-    tags: ["v*.*.*"]
+      - '**'
+    tags: ['v*.*.*']
   pull_request:
   merge_group:
   workflow_dispatch:
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
         with:
-          node-version-file: ".nvmrc"
-          cache: "yarn"
+          node-version-file: '.nvmrc'
+          cache: 'yarn'
 
       - name: Install dependencies 📦
         run: yarn install --immutable
